[gd_scene load_steps=7 format=2]

[ext_resource path="res://Title Theme.tres" type="Theme" id=1]
[ext_resource path="res://Button Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/GuessingGame.gd" type="Script" id=3]
[ext_resource path="res://Input Theme.tres" type="Theme" id=4]
[ext_resource path="res://Correct Theme.tres" type="Theme" id=5]
[ext_resource path="res://Too Low Theme.tres" type="Theme" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="DifficultySelect" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0

[node name="Label" type="Label" parent="DifficultySelect"]
margin_right = 819.0
margin_bottom = 237.0
theme = ExtResource( 1 )
text = "
Choose Difficulty
"
align = 1

[node name="easyDifficulty" type="Button" parent="DifficultySelect"]
margin_top = 241.0
margin_right = 819.0
margin_bottom = 298.0
theme = ExtResource( 2 )
text = "Easy | 1-100"

[node name="mediumDifficulty" type="Button" parent="DifficultySelect"]
margin_top = 302.0
margin_right = 819.0
margin_bottom = 359.0
theme = ExtResource( 2 )
text = "Medium | 1-300"

[node name="hardDifficulty" type="Button" parent="DifficultySelect"]
margin_top = 363.0
margin_right = 819.0
margin_bottom = 420.0
theme = ExtResource( 2 )
text = "Hard | 1-1000"

[node name="Label2" type="Label" parent="DifficultySelect"]
margin_top = 424.0
margin_right = 819.0
margin_bottom = 505.0
theme = ExtResource( 4 )
text = "Press Esc to Return to Menu
"
align = 1

[node name="Game" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Game"]
margin_right = 1024.0
margin_bottom = 157.0
theme = ExtResource( 1 )
text = "
Guess A Number From 1-"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Game"]
margin_top = 161.0
margin_right = 1024.0
margin_bottom = 210.0
alignment = 1

[node name="guessInput" type="LineEdit" parent="Game/HBoxContainer"]
margin_left = 262.0
margin_right = 762.0
margin_bottom = 49.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
align = 1

[node name="Control" type="Control" parent="Game"]
margin_top = 214.0
margin_right = 1024.0
margin_bottom = 214.0

[node name="VBoxContainer" type="VBoxContainer" parent="Game/Control"]
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Game/Control/VBoxContainer"]
margin_right = 1064.0
alignment = 1

[node name="tooHigh" type="Label" parent="Game/Control/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 352.0
margin_right = 712.0
margin_bottom = 77.0
theme = ExtResource( 6 )
text = "TOO HIGH! "

[node name="tooLow" type="Label" parent="Game/Control/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 324.0
margin_bottom = 77.0
theme = ExtResource( 6 )
text = "TOO LOW! "
align = 1

[node name="outOfRange" type="Label" parent="Game/Control/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 172.0
margin_right = 892.0
margin_bottom = 77.0
theme = ExtResource( 6 )
text = "Number out of range!"
align = 1

[node name="correct" type="Label" parent="Game/Control/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 100.0
margin_right = 964.0
margin_bottom = 77.0
theme = ExtResource( 5 )
text = "YOU GOT IT IN -- TRIES! "
align = 1

[node name="Label" type="Label" parent="Game/Control/VBoxContainer"]
margin_top = 4.0
margin_right = 1064.0
margin_bottom = 85.0
theme = ExtResource( 4 )
text = "
Press Esc to Restart   "
align = 1

[connection signal="pressed" from="DifficultySelect/easyDifficulty" to="." method="_on_easyDifficulty_pressed"]
[connection signal="pressed" from="DifficultySelect/mediumDifficulty" to="." method="_on_mediumDifficulty_pressed"]
[connection signal="pressed" from="DifficultySelect/hardDifficulty" to="." method="_on_hardDifficulty_pressed"]
[connection signal="text_changed" from="Game/HBoxContainer/guessInput" to="." method="_on_guessInput_text_changed"]
[connection signal="text_entered" from="Game/HBoxContainer/guessInput" to="." method="_on_guessInput_text_entered"]
